[EATON-679] FIX - Regression - Listing Page - Faceted Navigation - Mobile - Landing Hero text overlaps with Faceted Nav when enabled on the Listing Page

--- a/eaton.frontend/src/components/search-results/css/search-results.scss
+++ b/eaton.frontend/src/components/search-results/css/search-results.scss
@@ -8,5 +8,4 @@
 
 .search-results {
   position: relative;
-  z-index: 1;
 }
